[gd_scene load_steps=15 format=2]

[ext_resource path="res://Src/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/Mechs/ParallaxBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Src/World/Ground.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Music and sfx/Boss Theme.ogg" type="AudioStream" id=4]
[ext_resource path="res://Src/World/World.gd" type="Script" id=5]
[ext_resource path="res://Src/Gui/GameOver.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/coin.png" type="Texture" id=7]
[ext_resource path="res://Assets/ARLRDBD.TTF" type="DynamicFontData" id=8]
[ext_resource path="res://Src/Gui/Label.tscn" type="PackedScene" id=9]
[ext_resource path="res://Src/Gui/PauseMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://Src/Gui/Button.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 70, 70 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 70, 70 )

[node name="World" type="Node2D"]
script = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 34, 61 )
gravity = 500

[node name="Camera2D" parent="Player" index="1"]
position = Vector2( 78, -41.3333 )
limit_top = 0
limit_bottom = 150

[node name="Position2D" type="Position2D" parent="Player"]
position = Vector2( 250.667, -17.3333 )
scale = Vector2( 0.666667, 0.666667 )

[node name="HudLayer" type="CanvasLayer" parent="."]

[node name="Anchor" type="Control" parent="HudLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" parent="HudLayer/Anchor" instance=ExtResource( 9 )]
margin_left = -40.0
margin_right = 0.0
text = "1hhh"

[node name="CoinLabel" type="Label" parent="HudLayer/Anchor"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -59.0
margin_top = 18.0
margin_right = -19.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin" type="Sprite" parent="HudLayer/Anchor"]
modulate = Color( 1, 0.952941, 0.27451, 1 )
position = Vector2( 291, 25 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 7 )

[node name="GameOver" parent="HudLayer/Anchor" instance=ExtResource( 6 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="PauseMenu" parent="HudLayer/Anchor" instance=ExtResource( 10 )]
visible = false

[node name="PauseButton" parent="HudLayer/Anchor" instance=ExtResource( 11 )]
margin_left = -1.0
margin_top = 19.0
margin_right = 19.0
margin_bottom = 36.0
rect_scale = Vector2( 1, 0.8 )
text = "II"

[node name="Jump" type="TouchScreenButton" parent="HudLayer"]
position = Vector2( 0, 3 )
shape = SubResource( 2 )
action = "jump"

[node name="Shoot" type="TouchScreenButton" parent="HudLayer"]
position = Vector2( 162, 6 )
shape = SubResource( 3 )
action = "shoot"

[node name="ParallaxBackground" parent="." instance=ExtResource( 2 )]

[node name="SpawnTimer" type="Timer" parent="."]

[node name="CoinSpawnTimer" type="Timer" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Music" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
autoplay = true

[node name="StaticBody2D" parent="." instance=ExtResource( 3 )]

[node name="StaticBody2D2" parent="." instance=ExtResource( 3 )]
position = Vector2( 71, -177 )

[connection signal="button_up" from="HudLayer/Anchor/GameOver/RetryButton" to="." method="_on_RetryButton_button_up"]
[connection signal="button_up" from="HudLayer/Anchor/PauseMenu/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_button_up"]
[connection signal="button_up" from="HudLayer/Anchor/PauseMenu/VBoxContainer/MainMenu" to="." method="_on_MainMenu_button_up"]
[connection signal="button_up" from="HudLayer/Anchor/PauseMenu/VBoxContainer/Quit" to="." method="_on_Quit_button_up"]
[connection signal="button_up" from="HudLayer/Anchor/PauseButton" to="." method="_on_PauseButton_button_up"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="CoinSpawnTimer" to="." method="_on_CoinSpawnTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[editable path="Player"]
[editable path="HudLayer/Anchor/GameOver"]
[editable path="HudLayer/Anchor/PauseMenu"]
